<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.bc</groupId>
    <artifactId>bc-commons</artifactId>
    <name>BC Commons</name>
    <version>1.4.0</version>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.7.1</version>
        </dependency>
    </dependencies>
    <scm>
        <developerConnection>
            scm:git:git@github.com:bcdev/bc-commons.git
        </developerConnection>
    </scm>
    <distributionManagement>
        <repository>
            <id>bc-mvn-repo-public</id>
            <name>Public Maven Repository at Brockmann Consult</name>
            <url>scp://www.brockmann-consult.de/var/www/www.brockmann-consult.de/mvn/os</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
        <snapshotRepository>
            <id>bc-mvn-repo-public</id>
            <name>Public Maven Snapshot Repository at Brockmann Consult</name>
            <url>scp://www.brockmann-consult.de/var/www/www.brockmann-consult.de/mvn/os</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>bc-mvn-repo-http</id>
            <name>Public Maven Repository at Brockmann Consult</name>
            <url>http://www.brockmann-consult.de/mvn/os</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </repository>
        <repository>
            <id>bc-mvn-repo-closed</id>
            <name>Private Maven Repository at Brockmann Consult</name>
            <url>scp://www.brockmann-consult.de/home/maven-cs</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </repository>
    </repositories>
    <properties>
        <!-- Erzwingt überall UTF-8 (verhindert Encoding-Fehler unter Windows/Linux) -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Aktualisierte Version für das JAR-Plugin -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <build>
        <extensions>
            <!-- Tipp: Version auf >= 3.0.0 anheben, falls möglich -->
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>3.3.4</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <!-- Source/Target/Encoding werden jetzt sauber aus den Properties vererbt -->
                    <debug>true</debug>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <skip>false</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <!-- Aktualisiert auf eine stabile, moderne Version -->
                <version>3.4.2</version>
                <executions>
                    <execution>
                        <goals>
<!--                            <goal>jar</goal>-->
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!--    <build>-->
    <!--        <extensions>-->
    <!--            <extension>-->
    <!--                <groupId>org.apache.maven.wagon</groupId>-->
    <!--                <artifactId>wagon-ssh</artifactId>-->
    <!--                <version>1.0-beta-7</version>-->
    <!--            </extension>-->
    <!--        </extensions>-->
    <!--        <plugins>-->
    <!--            <plugin>-->
    <!--                <groupId>org.apache.maven.plugins</groupId>-->
    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
    <!--                <version>3.13.0</version>-->
    <!--                <configuration>-->
    <!--                    <source>1.8</source>-->
    <!--                    <target>1.8</target>-->
    <!--                    <debug>true</debug>-->
    <!--                    <encoding>UTF-8</encoding>-->
    <!--&lt;!&ndash;                    <encoding>ISO-8859-1</encoding>&ndash;&gt;-->
    <!--                </configuration>-->
    <!--            </plugin>-->
    <!--            <plugin>-->
    <!--                <groupId>org.apache.maven.plugins</groupId>-->
    <!--                <artifactId>maven-source-plugin</artifactId>-->
    <!--                <version>2.2.1</version>-->
    <!--                <executions>-->
    <!--                    <execution>-->
    <!--                        <phase>package</phase>-->
    <!--                        <goals>-->
    <!--                            <goal>jar</goal>-->
    <!--                            <goal>test-jar</goal>-->
    <!--                        </goals>-->
    <!--                    </execution>-->
    <!--                </executions>-->
    <!--            </plugin>-->
    <!--            <plugin>-->
    <!--                <groupId>org.apache.maven.plugins</groupId>-->
    <!--                <artifactId>maven-surefire-plugin</artifactId>-->
    <!--                <version>3.3.1</version>-->
    <!--                <configuration>-->
    <!--                    <skip>false</skip>-->
    <!--                </configuration>-->
    <!--            </plugin>-->
    <!--            <plugin>-->
    <!--                <groupId>org.apache.maven.plugins</groupId>-->
    <!--                <artifactId>maven-jar-plugin</artifactId>-->
    <!--                <version>2.2</version>-->
    <!--                <executions>-->
    <!--                    <execution>-->
    <!--                        <goals>-->
    <!--                            <goal>jar</goal>-->
    <!--                            <goal>test-jar</goal>-->
    <!--                        </goals>-->
    <!--                    </execution>-->
    <!--                </executions>-->
    <!--            </plugin>-->
    <!--        </plugins>-->
    <!--    </build>-->
</project>
